<resources>
    <string name="app_name">研修宝(管理端)</string>
    <string name="app_exit_tip">再按一次退出客户端</string>
    <!--permissions toast-->
    <string name="rationale_camera">此应用程序需要访问您的相机，以便您可以拍照.</string>
    <string name="rationale_write_read">此应用程序需要读取sd卡权限，请前往设置.</string>
    <string name="rationale_other">此应用程序需要申请使用权限，请前往设置.</string>

    <string name="no_camera_permissions">相机权限被禁用，请在权限设置中开启</string>
    <string name="no_storage_permissions">存储权限被禁用，请在权限设置中开启</string>
    <string name="data_refresh_fail">刷新数据失败</string>


    <!--PublicLoadLayout -->
    <string name="data_empty">暂无数据</string>
    <string name="net_data_error">无网络数据，请点击刷新</string>
    <string name="retry">点击重试</string>
    <string name="net_error">网络异常</string>

    <!--tab name-->
    <string name="tab_main">首页</string>
    <string name="yanxiubao">研修宝</string>
    <string name="tab_course">课程</string>
    <string name="tab_task">任务</string>
    <string name="tab_class_circle">班级圈</string>

    <!-- leftDrawerLayout-->
    <string-array name="left_drawer_item_names">
        <item>班级首页</item>
        <item>我的资料</item>
        <!--<item>投诉建议</item>-->
        <!--<item>设置</item>-->
        <!--<item>退出</item>-->
    </string-array>

    <!--loginActivity-->
    <string name="logo_name">logo</string>
    <string name="sign_in">登录</string>
    <string name="please_input_account_number">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="account_name_can_not_be_null">账户名不能为空</string>
    <string name="account_password_can_not_be_null">账户密码不能为空</string>

    <!--forgetPasswordActivity-->
    <string name="mobile_phone_number">输入手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">输入短信验证码</string>
    <string name="please_input_new_password">请输入6-20位新密码</string>
    <string name="reset_password_success">密码重置成功</string>
    <string name="time_count">%1$d</string>
    <string name="commit">提 交</string>

    <!-- check in page-->
    <string name="no_no_sign_in_data">无未签到数据</string>
    <string name="no_signed_in_data">无未已签到数据</string>
    <string name="check_in_notes">签到记录</string>
    <string name="create_new_notes">新建</string>
    <string name="create_new_check_in_name_hint">签到标题（最多20字）</string>
    <string name="check_in_success_hint">签到成功提示语（20字以内）</string>
    <string name="use_code">使用动态刷新的二维码</string>
    <string name="only_useful_in_check_in_time">只在签到时间内签到有效</string>
    <string name="end_time">结束时间</string>
    <string name="start_time">开始时间</string>
    <string name="check_in_time">签到日期</string>
    <string name="create_new_check_in">新建签到</string>
    <string name="commit_new_check_in">提交</string>
    <string name="check_in_title_can_not_be_null">签到标题不能为空</string>
    <string name="check_in_time_can_not_be_null">签到时间不能为空</string>
    <string name="check_in_start_time_can_not_be_null">签到开始时间不能为空</string>
    <string name="check_in_end_title_can_not_be_null">签到结束时间不能为空</string>
    <string name="check_in_success_toast_can_not_be_null">签到成功提示语不能为空</string>
    <string name="check_in_notes_is_null">签到记录为空</string>
    <string name="data_error">数据加载异常</string>
    <string name="has_check_in">已签到:&#160;&#160;</string>
    <string name="check_in_percentage">签到率:&#160;&#160;</string>
    <string name="has_check_in_proportion">%1$d/%2$d</string>
    <string name="signature_member">补签成员:</string>
    <string name="submit_a_supplement">提交补签</string>
    <string name="attendance_number"><Data><![CDATA[<font color="#99d5fe">签到人数 :&#160;</font><font color="#FFFFFF">%1$s</font>]]></Data></string>
    <string name="check_in_percentage_new"><![CDATA[<font color="#99d5fe">签到率 :&#160;</font><font color="#FFFFFF">%1$s</font>]]></string>
    <string name="no_sign_in">未签到</string>
    <string name="signed_in">已签到</string>
    <string name="check_in_detail">签到详情</string>
    <string name="end_time_must_be_greater_than_start_time">结束时间必须大于开始时间</string>
    <string name="check_in_code">签到二维码</string>
    <string name="retroactive">补签</string>

    <string name="manager_clazz">选择班级</string>


    <!-- task-->
    <string name="have_read_person_number"><Data><![CDATA[<font color="#999999">已查看人数:&#160;</font><font color="#0068BD"><b>%1$d/%2$d</b></font>]]></Data></string>
    <string name="have_success_person_number"><Data><![CDATA[<font color="#999999">已完成人数:&#160;</font><font color="#0068BD"><b>%1$d/%2$d</b></font>]]></Data></string>
    <string name="vote_person_number"><Data><![CDATA[<font color="#99d5fe">投票人数:&#160;</font><font color="#ffffff">%1$d/%2$d</font>]]></Data></string>
    <string name="vote_person_number_title"><Data><![CDATA[<font color="#333333">投票人数:&#160;%1$d/%2$d</font>]]></Data></string>
    <string name="submit_person_number"><Data><![CDATA[<font color="#99d5fe">提交人数:&#160;</font><font color="#ffffff">%1$d/%2$d</font>]]></Data></string>
    <string name="submit_person_number_title"><Data><![CDATA[<font color="#333333">提交人数:&#160;%1$d/%2$d</font>]]></Data></string>
    <string name="see_detail">查看详情</string>
    <string name="vote_detail">投票详情</string>
    <string name="questionnaire_detail">问卷详情</string>
    <string name="see_reply">查看回复</string>
    <string name="no_submit">未提交</string>
    <string name="submitted">已提交</string>
    <string name="no_no_submit_data">无未提交数据</string>
    <string name="no_no_vote_data">无未投票数据</string>
    <string name="no_submitted_data">无已提交数据</string>
    <string name="no_voted_data">无已投票数据</string>
    <string name="voted">已投票</string>
    <string name="no_vote">未投票</string>

    <!--首页相关 start-->
    <!--首页相关 start-->
    <string name="homepage">首页</string>
    <string name="course">课程</string>
    <string name="task">任务</string>
    <string name="classcircle">班级圈</string>
    <string name="currentProject">当前项目</string>
    <string name="time">时间</string>
    <string name="class_detail">班级详情</string>
    <string name="im_talk">聊聊</string>
    <string name="project_detail">项目详情</string>
    <string name="detail_duration">%1$s 至 %2$s</string>
    <string name="class_descr_title">- 班级描述 -</string>
    <string name="project_descr_title">- 项目描述 -</string>
    <string name="num_class_member">班级学员： %s</string>
    <string name="num_master">班主任： %s</string>
    <string name="main_detail_title">详情</string>
    <string name="notice_manage_title">通知管理</string>
    <string name="notice_post">发布</string>
    <string name="notice_post_title">发布通知</string>
    <string name="notice_submit">提交</string>
    <string name="notice_edit_title_hint">请输入通知标题 (最多20字）</string>
    <string name="schedule_edit_title_hint">请输入日程标题 (最多20字）</string>
    <string name="notice_edit_content_hint">请输入通知内容,暂不支持表情</string>
    <string name="notice_delete">删除</string>
    <string name="update">修改</string>
    <string name="notice_cancel">取消</string>
    <string name="notice_detail_title">通知详情</string>
    <string name="has_read">已阅读:</string>


    <string name="no_more_data">没有更多数据</string>

    <string name="class_circle_comment_to_user">回复%1$s:(暂不支持表情)</string>
    <string name="class_circle_comment_to_master">评论(暂不支持表情)</string>
    <string name="send_class_circle_fail">发布失败，请重试！</string>
    <string name="send_class_circle_hint">这一刻的想法...</string>
    <string name="class_circle_comment_hint">评论(暂不支持表情)</string>
    <string name="class_circle_like">赞</string>
    <string name="class_circle_comment">评论</string>
    <string name="class_circle_delete">删除</string>
    <string name="comment_to_user">%1$s对%2$s说: %3$s</string>
    <string name="comment_to_master">%1$s: %2$s</string>
    <string name="text_all">全文</string>
    <string name="text_line">收起</string>

    <string name="cancle">取消</string>
    <string name="send">发表</string>
    <string name="send_success">发布成功</string>
    <string name="error_tip">你的输入内容中可能存在表情，请修改后再次提交!</string>
    <!--course-->
    <string name="lecturer">讲师</string>
    <string name="area">地点</string>
    <string name="sign_in_number"><Data><![CDATA[<font color="#999999">%1$s :&#160;</font><font color="#666666">%2$d/%3$d</font>]]></Data></string>
    <string name="wait_for">待定</string>
    <string name="today_course">今日课程</string>
    <string name="change_class">切换班级</string>
    <string name="yes">确定</string>
    <string name="manager_schedule">日程管理</string>
    <string name="publish_schedule">发布日程</string>
    <string name="publish_resource">上传资源</string>
    <string name="manager_resource">资源管理</string>
    <string name="upload">上传</string>
    <string name="resource_edit_title_hint">请输入资源名称 (最多20字）</string>
    <string name="resource_edit_lianjie_hint">网页链接</string>

    <string name="course_task">课程任务</string>
    <string name="course_resource">课程资源</string>
    <string name="have_finish_number"><Data><![CDATA[<font color="#999999">已完成人数:&#160;</font><font color="#0068BD"><b>%1$d/%2$d</b></font>]]></Data></string>
    <string name="have_read_number"><Data><![CDATA[<font color="#999999">已完查看数:&#160;</font><font color="#0068BD">%1$d/%2$d</font>]]></Data></string>
    <string name="no_lecture">无授课讲师信息</string>
    <string name="no_brief">暂无简介</string>
    <string name="add_adress">添加</string>
    <string name="course_lecture">课程讲师</string>
    <string name="lecture_brief">课程简介</string>
    <string name="course_message">课程信息</string>
    <string name="reply_number">回复(%1$s)</string>
    <string name="reply">回复</string>
    <string name="no_reply_record">没有回复记录</string>
    <string name="no_comment_record">没有讨论记录</string>
    <string name="no_more_reply_record">没有更多回复记录</string>
    <string name="no_more_comment_record">没有更多讨论记录</string>
    <string name="no_reply_now">暂无回复</string>
    <string name="zan_number">%1$d个赞</string>
    <string name="course_comment">课程讨论</string>

    <string name="version_updata">新版本更新</string>
    <string name="updata_after">以后再说</string>
    <string name="updata_now">立即更新</string>

    <string name="update_asynctask_downloading">正在下载</string>
    <string name="update_asynctask_downloading_fail">下载失败</string>
    <string name="update_asynctask_downloading_cel">取消下载</string>
    <string name="update_asynctask_downloading_success">下载完成</string>
    <string name="update_new">当前已是最新版本！</string>
    <string name="app_update">检测到新版本%s</string>
    <string name="app_update_sure">更新</string>
    <string name="app_update_cancle">取消</string>
    <string name="app_update_inoge">忽略</string>
    <string name="app_update_exit">退出</string>
    <string name="no_task">尚未发布任务</string>
    <string name="no_course">尚未发布课程</string>
    <string name="no_check_in">尚未设置签到</string>
    <string name="comment">评论(暂不支持表情)</string>
    <string name="message">消息</string>
    <string name="get_qiniu_token_error">获取七牛上传凭证失败</string>
    <string name="sure">确定</string>
    <string name="select">%1$s/%2$s</string>
    <string name="new_message">%1$d条新消息</string>
    <string name="publish">发布</string>

</resources>
