<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:alpha="0.4"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notice_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/color_333333"
            android:textSize="16dp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_EBEFF2" />

        <TextView
            android:id="@+id/notice_delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/notice_delete"
            android:textColor="@color/color_333333"
            android:textSize="16dp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/color_666666" />


        <TextView
            android:id="@+id/notice_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/notice_cancel"
            android:textColor="@color/color_333333"
            android:textSize="16dp" />

    </LinearLayout>
</RelativeLayout>