<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="375dp"
            android:layout_height="120dp"
            android:background="@drawable/main_detail_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:text="19号一班"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/detail_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/detail_duration"
                android:textColor="@color/color_999999"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/project_layput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num_class_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/num_class_member"
                    android:textColor="@color/color_666666"
                    android:textSize="13dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/color_939699" />

                <TextView
                    android:id="@+id/num_master"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/num_master"
                    android:textColor="@color/color_666666"
                    android:textSize="13dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_descr_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:text="@string/class_descr_title"
                android:textColor="@color/color_333333"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/color_333333"
                android:textSize="13sp" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>
