<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.yanxiu.gphone.faceshowadmin_android.login.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_app_logo" />


        <com.yanxiu.gphone.faceshowadmin_android.customView.ClearEditText
            android:id="@+id/edt_account_number"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:background="@drawable/shape_password_bg"
            android:hint="@string/please_input_account_number"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="15655248880"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@null"
            android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_password_bg">

            <EditText
                android:id="@+id/edt_account_password"
                android:layout_width="225dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@."
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:text="123456"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/img_show_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/selector_hide_password" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_sign_in_normal_bg"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/color_0068BD"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_sign_in"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/forget_password"
                android:textColor="@color/color_white"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
