<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_course_adapter_item"
    android:orientation="vertical"
    android:paddingStart="15dp">


    <TextView
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:textColor="@color/color_333333"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="国培计划" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/tag_width"
            android:layout_height="@dimen/tag_height"
            android:background="@drawable/shape_course_item"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/color_white"
            android:textSize="@dimen/tag_textsize" />

        <TextView
            android:id="@+id/course_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tag_marginleft"
            android:gravity="center"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_textsize"
            tools:text="上午 12.00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/tag_width"
            android:layout_height="@dimen/tag_height"
            android:background="@drawable/shape_course_item"
            android:gravity="center"
            android:text="@string/lecturer"
            android:textColor="@color/color_white"
            android:textSize="@dimen/tag_textsize" />

        <TextView
            android:id="@+id/course_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tag_marginleft"
            android:gravity="center"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_textsize"
            tools:text="李老师" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="9dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/tag_width"
            android:layout_height="@dimen/tag_height"
            android:background="@drawable/shape_course_item"
            android:gravity="center"
            android:text="@string/area"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/tag_textsize" />

        <TextView
            android:id="@+id/course_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tag_marginleft"
            android:gravity="center"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_textsize"
            tools:text="第六会议室" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/check_in_item_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="13dp"
        android:background="@color/color_EBEFF2" />
</LinearLayout>